--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Lora" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Lora|Pacifico" rel="stylesheet">
     <!-- end of fonts -->
-    
+    <!-- Script for infoBox component -->
+    <script src="/path/to/infobox.js" type="text/javascript"></script>
+    <!-- End of script for infoBox component -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>App-comer</title>
@@ -19,6 +21,5 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    
   </body>
 </html>
